web commit from 66.118.98.137:

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -5,7 +5,7 @@ markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
 * See [[Features]] for a current list of ikiwiki's features. 
 
-* [[Setup]] has a tutorial for setting up ikiwki.
+* [[Setup]] has a tutorial for setting up ikiwki, and [[Usage]] documents the parameters and usage of the ikiwiki program.
 
 * [[TODO]] and [[bugs]] lists things that need to be added to ikiwiki before most people would consider it a full-fledged wiki.
 
