web commit from 66.118.98.137:

--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -8,7 +8,7 @@ ikiwiki [options] source templates destination
 
 # DESCRIPTION
 
-`ikiwiki` is a wiki compiler. It builds static html pages for a wiki, from `source` in the [[MarkDown]] `language`, using the specified html `templates` and writes it out to `destination`.
+`ikiwiki` is a wiki compiler. It builds static html pages for a wiki, from `source` in the [[MarkDown]] language, using the specified html `templates` and writes it out to `destination`.
 
 # OPTIONS
 
