web commit from 66.118.98.137:

--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -74,4 +74,4 @@ optional support for commits from the web.
 
                 --historyurl='http://svn.host/trunk/doc/[[]]?root=wiki'
 
-11. Enjoy your new wiki!
+11. Enjoy your new wiki! Add yourself to [[IkiWikiUsers]]
