--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -1,3 +1,3 @@
 This page is to track users of ikiwiki.
 
-* [http://ikiwiki.kitenet.net](this wiki)
+* [This wiki](http://ikiwiki.kitenet.net) (of course!)
