- finish user registration and password request email - make sure a user is in the userdb before assuming they're logged on based   on session info (allows deleting uerdb item and invalidating all   sessions)

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -44,11 +44,19 @@ Currently implemented:
 
 * [[PageHistory]]
 
-  Well, sorta. Rather than implementing YA history browser, it can link to [[ViewCVS]] or the link to browse the history of a wiki page.
+  Well, sorta. Rather than implementing YA history browser, it can link to
+  [[ViewCVS]] or the link to browse the history of a wiki page.
 
 * [[RecentChanges]], editing pages in a web browser
 
-  Nearly the definition of a wiki, although perhaps ikiwiki challenges how much of that web gunk a wiki really needs. These features are optional and can be enabled by enabling [[CGI]].
+  Nearly the definition of a wiki, although perhaps ikiwiki challenges how
+  much of that web gunk a wiki really needs. These features are optional
+  and can be enabled by enabling [[CGI]].
+
+* User registration
+
+  Can optionally be configured to allow only registered users to post
+  pages; online user registration form, etc.
 
 ----
 
