--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -8,7 +8,9 @@ It ships with some basic templates which can be customised:
 * `templates/misc.tmpl` - Generic template used for any page that doesn't
   have a custom template.
 * `templates/recentchanges.tmpl` - Used for the RecentChanges page.
-* `templates/editpage.tmpl' - Create/edit page.
+* `templates/editpage.tmpl` - Create/edit page.
+* `templates/passwordmail.tmpl` - Not a html template, this is used to
+  generate the mail with the user's password in it.
 
 If you like, you can add these to further customise it:
 
