--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -1,9 +1,8 @@
 ## online page editing
 
 * Missing support for preview, cancel.
-* Missing conflict detection.
-* Missing commit message box.
-* No support for web user tracking/login yet.
+* Missing conflict detection, just overwrites changes and does not svn up
+  first.
 * Eventually, might want page deletion.
 * Eventually, might want file upload.
 
