web commit by joey

--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -12,7 +12,7 @@ It ships with some basic templates which can be customised:
 * `templates/passwordmail.tmpl` - Not a html template, this is used to
   generate the mail with the user's password in it.
 
-If you like, you can add these to further customise it:
+If you like, you can add this to further customise it:
 
 * `templates/signin.tmpl` - If it exists, it is used for customising the
   layout of the SignIn form and all assciated forms. The misc.tmpl is
