web commit by webtest

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -1,6 +1,6 @@
 ## online page editing
 
-* Missing support for preview, cancel.
+* Missing support for preview.
 * Missing conflict detection, just overwrites changes and does not svn up
   first.
 * Eventually, might want page deletion.
