--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -2,7 +2,7 @@
 
 * Missing support for preview.
 * Missing conflict detection, just overwrites changes and does not svn up
-  first.
+  first..
 * Eventually, might want page deletion.
 * Eventually, might want file upload.
 
