web commit by webtest

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,3 +1,5 @@
+Welcome to the ikiwiki documentation wiki.
+
 ikiwiki is a wiki compiler. It converts a directory full of wiki pages
 into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history or its own
