--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -58,6 +58,12 @@ Currently implemented:
   Can optionally be configured to allow only registered users to post
   pages; online user registration form, etc.
 
+* Discussion pages
+
+  Thanks to subpages, every page can easily and automatically have a
+  /Discussion subpage. By default, these links are included in the
+  [[templates]] for each page.
+
 ----
 
 It also has lots of [[TODO]] items and [[Bugs]]. This wiki is not ready for production!
