--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -8,7 +8,16 @@
 
 ## recentchanges
 
-Should support RSS for notification of new and changed pages.
+* Should support RSS for notification of new and changed pages. 
+
+  This can be a static rss file that is generated when the moo
+is built. (As long as all changes to all pages is ok.)
+
+* Should support mail notification of new and changed pages.
+
+  Hmm, should be easy to implement this.. it runs as a svn post-cookit hook
+  already, so just look at the userdb, svnlook at what's changed, and send
+  mails to people who have subscribed.
 
 ## docs
 
@@ -43,5 +52,13 @@ case.
 ## html
 
 Make the html valid. Add css.
+
+## sigs
+
+Need a way to sign name in page that's easier to type than "-- [[ Joey ]]"
+and that includes the date.
+
+What syntax do other wikis use for this? I'm considering "[[ -- ]]" (with
+spaces removed) as it has a nice nmemonic.
 
 ## [[Bugs]]
