web commit by webtest

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -1,4 +1,4 @@
-This [[subpage[] is a discussion page for ikiwiki. Feel free to discuss anything about the program here.
+This [[subpage]] is a discussion page for ikiwiki. Feel free to discuss anything about the program here.
 
 ----
 
