web commit by webtest

--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -12,7 +12,7 @@ ikiwiki [options] source templates destination
 
 # OPTIONS
 
-Note that most options can be shortened to single letters.
+Note that most options can be shortened to single letters, and boolean flags such as --verbose can be negated with --no-verbose.
 
 * --wikiname
 
