--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -56,16 +56,16 @@ Make the html valid. Add css.
 
 ## sigs
 
-Need a way to sign name in page that's easier to type than "-- [[ Joey ]]"
+Need a way to sign name in page that's easier to type than "--\[[Joey]]"
 and that includes the date.
 
-What syntax do other wikis use for this? I'm considering "[[ -- ]]" (with
+What syntax do other wikis use for this? I'm considering "\[[--]]" (with
 spaces removed) as it has a nice nmemonic.
 
 OTOH, adding additional syntax for this would be counter to one of the
 design goals for ikiwiki: keeping as much markup as possible out of the
 wiki and not adding nonstandard markup. And it's not significantly hard to
-type "--[[Joey]]", and as to the date, we do have page history.
+type "--\[[Joey]]", and as to the date, we do have page history.
 
 ## recentchanges links to commit diffs
 
