--- a/doc/wikilink.mdwn
+++ b/doc/wikilink.mdwn
@@ -1,6 +1,9 @@
 WikiLinks provide easy linking between pages of the wiki. To create a
-WikiLink, just put the name of the page to link to in double brackets. For
-examples "[[ WikiLink ]]" (without the added whitespace). 
+[[WikiLink]], just put the name of the page to link to in double brackets.
+For example "\[[WikiLink]]".
+
+If you ever need to write something like "\[[WikiLink]] without creating a
+wikilink, just prefix it with a "\", like "\\\\[[WikiLink]]".
 
 Note that there are some special [[SubPage/LinkingRules]] that come into
 play when linking between [[SubPage]]s.
