Some fixes to the parent links, I think the link to the index will be right in all cases now.

--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -20,3 +20,5 @@
   replaced with a link to the [[CGI]]?
 * [[ikiwiki]] should go to the same place as [[index]] (on this wiki).
 * There's no way to escape a [[WikiLink]] when discussing one on a wiki.
+* Seems to be losing track of just-created pages and not adding them to the
+  index.
