fix Discussion links to not take the BestLink.
As a bonus we now have meta Disussion/Discussion pages available, etc. Oh
well.. :-)

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -86,4 +86,15 @@ allow for different types of setup files for more than just the one
 hardcoded thing there is now, and would probably be good for upgrades,
 incompatible changes, etc, too.
 
+## base wiki
+
+Need a toned down version of this wiki with a basic frontpage, sandbox and
+docs to use as a seed for new wikis.
+
+## search
+
+* full text (use third-party tools?)
+* list of all missing pages
+* list of all pages or some kind of page map
+
 ## [[Bugs]]
