--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -4,9 +4,6 @@
   to point to it, but will forget to update the linkbacks in Foo/Baz.
   And if Foo/Bar/Baz is then removed, it forgets to update Foo/Bar to link
   back to Foo/Baz.
-
-  Basically this makes creating new pages painful, top of TODO list..
-
 * Foo/Bar/Baz shows up as Bar/Baz in the linkbacks on page Foo/Bar. Should
   show as just Baz there.
 * If I try to do a web commit, to a svn+ssh repo, it fails with
@@ -20,3 +17,4 @@
   replaced with a link to the [[CGI]]?
 * [[ikiwiki]] should go to the same place as [[index]] (on this wiki).
 * There's no way to escape a [[WikiLink]] when discussing one on a wiki.
+* Doesn't update pages that linked to a page when it is removed.
