--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -4,11 +4,21 @@ Currently implemented:
 
 * [[Subversion]]
 
-  Rather than implement its own system for storing page histories etc, ikiwiki      simply uses subversion. (Supporting other revision control systems is also possible, ikiwiki only needs $FOO add, $FOO commit, and $FOO log).
+  Rather than implement its own system for storing page histories etc,
+  ikiwiki simply uses subversion. (Supporting other revision control
+  systems is also possible, ikiwiki only needs $FOO add, $FOO commit, and
+  $FOO log).
 
-  Instead of editing pages in a stupid web form, you can use vim and commit changes via svn. Or work disconnected using svk and push your changes out when you come online. Deal with edit conflicts with others in a sane environment. Take advantage of subversion's smart merges.
+  Instead of editing pages in a stupid web form, you can use vim and commit
+  changes via svn. Or work disconnected using svk and push your changes out
+  when you come online. Deal with edit conflicts with others in a sane
+  environment. Take advantage of subversion's smart merges.
 
- ikiwiki can be run from a [[post-commit]] hook to update your wiki immediately whenever you commit.
+  ikiwiki can be run from a [[post-commit]] hook to update your wiki
+  immediately whenever you commit.
+
+  Note that ikiwiki does not require subversion to function. If you want to
+  run a simple wiki without page history, it can do that too.
 
 * [[MarkDown]]
 
