man page generation

--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -100,3 +100,5 @@ flags such as --verbose can be negated with --no-verbose.
 # AUTHOR
 
 Joey Hess <joey@kitenet.net>
+
+Warning: this page is automatically made into ikiwiki's man page, edit with care
