--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -71,9 +71,11 @@ this wiki, BTW.
 
 ## svn commit logs
 
-Currently html is not escape in svn commit logs, this should probably be fixed.
-
 Anyone with svn commit access can forge "web commit from foo" and make it appeat on [[RecentChanges]] like foo committed. One way to avoid this would be to limit web commits to those done by a certian user.
+
+It's actually possible to force a whole series of svn commits to appear to have come just before yours, by forging svn log output. This could be guarded against somewhat by revision number scanning, since the forged revisions would duplicate the numbers of unforged ones. Or subversion could fix svn log to indent commit messages, which would make such forgery impossible..
+
+ikiwiki escapes any html in svn commit logs to prevent other mischief.
 
 ----
 
