web commit by joey

--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -139,7 +139,7 @@ security holes breed. It needs a test suite at the very least.
 ## cgi password security
 
 Login to the wiki involves sending a password in cleartext over the net.
-Cracking the password only allows editing the moo as that user though.
+Cracking the password only allows editing the wiki as that user though.
 If you care, you can use https, I suppose.
 
 ## CGI::Session security
