web commit by joey

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -5,11 +5,9 @@ into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history or its own
 markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
-* See [[Features]] for a current list of ikiwiki's features. 
+* See [[Features]] for a current list of ikiwiki's features. [[TODO]] and [[bugs]] might also be of interest.
 
 * [[Setup]] has a tutorial for setting up ikiwki, and [[Usage]] documents the parameters and usage of the ikiwiki program.
-
-* [[TODO]] and [[bugs]] lists things that need to be added to ikiwiki before most people would consider it a full-fledged wiki.
 
 * [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, so don't expect things to stay in this list for long.
 
